tests/fixtures/invalid/bytes_sub_str.py
# Cannot subtract Bytes and Str
x: bytes = b"hello" - "hello"
